--- a/www/assets/style.css
+++ b/www/assets/style.css
@@ -29,16 +29,18 @@ h1 {
     justify-content: center;
     align-items: center;
     margin: 0;
-    height: 90vh;
+    height: 100vh;
 }
 
 .footer {
+    position: absolute;
+    bottom: 0;
     color: white;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100%;
+    width: 100%;
 }
 
 .inline_container {
